Deck-admin: fix alignment in CSS

--- a/client/src/scss/admin-screen.scss
+++ b/client/src/scss/admin-screen.scss
@@ -68,11 +68,9 @@
     gap: 0.5em;
     align-items: center;
     .prompt-pick-number {
-      align-self: flex-end;
       // not needed because the edit button is there:
       // margin-left: auto;
-      margin-bottom: 0.1em;
-      margin-right: -0.1em;
+      margin-left: 0;
       flex-shrink: 0;
     }
   }
@@ -116,7 +114,6 @@
   }
   .edit-button-container {
     margin-left: auto;
-    height: 100%;
     .edit-button {
       display: none; // hidden by default
     }
